--- a/4_manuscript/pub_spc_lung_cancer.bib
+++ b/4_manuscript/pub_spc_lung_cancer.bib
@@ -289,7 +289,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   pages = {571--577},
   issn = {1866-0452},
   doi = {10.3238/arztebl.2018.0571},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\TWMKN5YJ\\Mons et al - 2018 - Cancers due to smoking and high alcohol consumption.pdf},
   journal = {Deutsches Ärzteblatt International},
   number = {35-36}
 }
@@ -343,7 +342,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   issn = {0284-186X, 1651-226X},
   doi = {10.1080/0284186X.2017.1390250},
   annotation = {SPN\_List\_023},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\2VGFN6UM\\Khanal et al - 2018 - The risk of second primary malignancy in patients with stage Ia non-small cell.pdf;C\:\\Users\\ga27jar\\Zotero\\storage\\Q65W4I58\\Khanal et al - 2018 - The risk of second primary malignancy in patients with stage Ia non-small cell.pdf},
   journal = {Acta Oncologica},
   language = {en},
   number = {2}
@@ -362,7 +360,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   pages = {3553--3559},
   issn = {1837-9664},
   doi = {10.7150/jca.27490},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\U2LZ6M78\\Liu et al - 2019 - Lung cancer in young adults aged 35 years or younger.pdf},
   journal = {Journal of Cancer},
   language = {en},
   number = {15}
@@ -381,8 +378,7 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   issn = {1470-2045},
   doi = {10.1016/S1470-2045(14)70266-9},
   abstract = {Tobacco use is an established risk factor for the development of several cancers; however, far less work has been done to understand the effects of continued smoking on cancer treatment outcomes, and structured tobacco cessation efforts are not well incorporated into the standard care for patients with cancer. In this Review we discuss the known biological effects of smoking on cancer cell biology and emphasise the clinical effects of continued smoking in patients with cancer treated with chemotherapy or radiotherapy. Although evidence supports the need for inclusion of dedicated tobacco cessation efforts for patients with cancer, clinicians should consider the methods used to provide evidence-based tobacco cessation support and the available resources to deliver and maintain consistent tobacco cessation support. We also address the variables to consider in the design and implementation of a sustainable tobacco cessation programme.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\UZMKXXLD\\Warren et al - 2014 - The biological and clinical effects of smoking by patients with cancer and.pdf},
-  journal = {The Lancet Oncology},
+   journal = {The Lancet Oncology},
   keywords = {\#cited},
   language = {en},
   number = {12}
@@ -403,7 +399,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   doi = {10.1136/thoraxjnl-2018-212456},
   abstract = {Background Lung cancer 5-year survival has doubled over 15 years. Although the risk of second primary cancer is recognised, quantification over time is lacking. We describe the incidence of second and higher order smoking-related primary cancers in lung cancer survivors, identifying high-incidence groups and how incidence changes over time from first diagnosis. Methods Data on smoking-related primary cancers (lung, laryngeal, head and neck, oesophageal squamous cell carcinoma and bladder) diagnosed in England between 2000 and 2014 were obtained from Public Health England National Cancer Registration and Analysis Service. We calculated absolute incidence rates and standardised incidence rate ratios, both overall and for various subgroups of second primary cancer for up to 10 years from the initial diagnosis of lung cancer, using Poisson regression. Results Elevated incidence of smoking-related second primary cancer persists for at least 10 years from first lung cancer diagnosis with those aged 50 and 79 at first diagnosis at particularly high risk. The most frequent type of second malignancy was lung cancer although the highest standardised incidence rate ratios were for oesophageal squamous cell carcinoma (2.4) and laryngeal cancers (2.8) and consistently higher in women than in men. Over the last decade, the incidence of second primary lung cancer has doubled. Conclusion Lung cancer survivors have increased the incidence of subsequent lung, laryngeal, head and neck and oesophageal squamous cell carcinoma for at least a decade from the first diagnosis. Consideration should be given to increasing routine follow-up from 5 years to 10 years for those at highest risk, alongside surveillance for other smoking-related cancers.},
   copyright = {\textcopyright{} Author(s) (or their employer(s)) 2019. Re-use permitted under CC BY-NC. No commercial re-use. See rights and permissions. Published by BMJ.. This is an open access article distributed in accordance with the Creative Commons Attribution Non Commercial (CC BY-NC 4.0) license, which permits others to distribute, remix, adapt, build upon this work non-commercially, and license their derivative works on different terms, provided the original work is properly cited, appropriate credit is given, any changes made indicated, and the use is non-commercial. See: http://creativecommons.org/licenses/by-nc/4.0/.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\6MIET3BA\\thoraxjnl-2018-212456-inline-supplementary-material-1.pdf;C\:\\Users\\ga27jar\\Zotero\\storage\\L752N34P\\Barclay et al. - 2019 - Incidence of second and higher order smoking-relat.pdf},
   journal = {Thorax},
   keywords = {\#cited,\#good example,\#to be read,clinical epidemiology,lung cancer,non-small cell lung cancer},
   language = {en},
@@ -425,7 +420,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   doi = {10.1002/ijc.32101},
   abstract = {While there are a growing number of cancer survivors, this population is at increased risk of developing second primary malignancies (SPMs). We described the incidence, most common tumor sites, and trends in burden of SPM among survivors of the most commonly diagnosed smoking-related cancers. The current study was a population-based study of patients diagnosed with a primary malignancy from the top 10 smoking-related cancer sites between 2000 and 2014 from Surveillance, Epidemiology, and End Results data. SPM risks were quantified using standardized incidence ratios (SIRs) and excess absolute risks (EARs) per 10,000 person-years at risk (PYR). Trends in the burden of SPM were assessed using Joinpoint regression models. A cohort of 1,608,607 patients was identified, 119,980 (7.5\%) of whom developed SPM (76\% of the SPMs were smoking-related). The overall SIR of developing second primary malignancies was 1.51 (95\% CI, 1.50\textendash 1.52) and the EAR was 73.3 cases per 10,000 PYR compared to the general population. Survivors of head and neck cancer had the highest risk of developing a SPM (SIR = 2.06) and urinary bladder cancer had the highest excess burden (EAR = 151.4 per 10,000 PYR). The excess burden of SPM for all smoking-related cancers decreased between 2000 and 2003 (annual percentage change [APC] = -13.7\%; p = 0.007) but increased slightly between 2003 and 2014 (APC = 1.6\%, p = 0.032). We show that 1-in-12 survivors of smoking-related cancers developed an SPM. With the significant increase in the burden of SPM from smoking-related cancers in the last decade, clinicians should be cognizant of long-term smoking-related cancer risks among these patients as part of their survivorship care plans.},
   copyright = {\textcopyright{} 2019 UICC},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\H2YACZXV\\Boakye et al. - 2019 - Trends in the risk and burden of second primary ma.pdf;C\:\\Users\\ga27jar\\Zotero\\storage\\MMEFBM2L\\ijc32101-sup-0001-supinfo.pdf},
   journal = {International Journal of Cancer},
   keywords = {\#cited,and end results (SEER) program,cancer survivors,epidemiology,second primary malignancy,smoking-associated cancers,surveillance,tobacco,trend analysis},
   language = {en},
@@ -445,7 +439,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   issn = {1471-2407},
   doi = {10.1186/1471-2407-14-94},
   abstract = {Although cancer survivors are known to be at greater risk of developing second primary cancer (SPC), SPC incidence estimates in France are thus far lacking. We used a multivariate approach to compute these estimates and analyzed the effect of patient characteristics (gender, age at diagnosis, first cancer site, year of diagnosis and follow-up) on SPC risk.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\CYAQ8Y49\\Jégu et al - 2014 - The effect of patient characteristics on second primary cancer risk in France.pdf},
   journal = {BMC Cancer},
   keywords = {\#cited,France,Multivariate analysis,Neoplasms,Registries,Risk assessment,Second primary},
   number = {1}
@@ -466,7 +459,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   issn = {0923-7534, 1569-8041},
   doi = {10.1093/annonc/mdt279},
   abstract = {{$<$}h2{$>$}Abstract{$<$}/h2{$><$}h3{$>$}Background{$<$}/h3{$><$}p{$>$}Smoking is a well-known risk factor for cancer; however, there is little evidence as to whether the smoking status of cancer survivors has any risk for subsequent primary cancer (SPC) incidence, regardless of the first cancer sites.{$<$}/p{$><$}h3{$>$}Patients and methods{$<$}/h3{$><$}p{$>$}In total, 29 795 eligible patients with a first cancer between 1985 and 2004 were examined for SPC until the end of 2006, using a record linkage between hospital-based and population-based cancer registries. The association between smoking at the time of the first cancer diagnosis and three SPC groups (i.e. specific SPC, smoking-related SPCs, and all SPCs) was calculated by Poisson regression.{$<$}/p{$><$}h3{$>$}Results{$<$}/h3{$><$}p{$>$}Ever smokers had 59\% and 102\% higher risk for all SPCs and smoking-related SPCs, respectively, than never smokers. Cancer survivors who had recently stopped smoking had 18\% and 26\% less risk, respectively, for these SPCs than those who smoked at the diagnosis. We also found that, compared with those who had never smoked, cancer survivors who had ever smoked had a significantly elevated risk of oral/pharyngeal, esophageal, stomach, lung, and hematological SPCs, regardless of the first cancer sites.{$<$}/p{$><$}h3{$>$}Conclusions{$<$}/h3{$><$}p{$>$}These findings indicate that smoking increases not only the first cancer but also a second or SPC. Moreover, the results from recent quitters versus current smokers suggest that smoking cessation may decrease the risk for SPC, especially for smoking-related SPCs in cancer survivors. Preventive measures are necessary to reduce not only SPC incidence but also tobacco use.{$<$}/p{$>$}},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\E43ELQYZ\\1-s2.0-S0923753419370978-mmc1.docx;C\:\\Users\\ga27jar\\Zotero\\storage\\G6YMH448\\1-s2.0-S0923753419370978-mmc2.docx;C\:\\Users\\ga27jar\\Zotero\\storage\\NWUTJH7U\\Tabuchi et al - 2013 - Tobacco smoking and the risk of subsequent primary cancer among cancer survivors.pdf},
   journal = {Annals of Oncology},
   keywords = {\#cited},
   language = {English},
@@ -490,7 +482,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   doi = {10.1186/1471-2407-11-83},
   abstract = {Cancer survivors face an increased likelihood of being subsequently diagnosed with another cancer. The aim of this study was to quantify the relative risk of survivors developing a second primary cancer in Queensland, Australia. Standardised incidence rates stratified by type of first primary cancer, type of second primary cancer, sex, age at first diagnosis, period of first diagnosis and follow-up interval were calculated for residents of Queensland, Australia, who were diagnosed with a first primary invasive cancer between 1982 and 2001 and survived for a minimum of 2 months. A total of 23,580 second invasive primary cancers were observed over 1,370,247 years of follow-up among 204,962 cancer patients. Both males (SIR = 1.22; 95\% CI = 1.20-1.24) and females (SIR = 1.36; 95\% CI = 1.33-1.39) within the study cohort were found to have a significant excess risk of developing a second cancer relative to the incidence of cancer in the general population. The observed number of second primary cancers was also higher than expected within each age group, across all time periods and during each follow-up interval. The excess risk of developing a second malignancy among cancer survivors can likely be attributed to factors including similar aetiologies, genetics and the effects of treatment, underlining the need for ongoing monitoring of cancer patients to detect subsequent tumours at an early stage. Education campaigns developed specifically for survivors may be required to lessen the prevalence of known cancer risk factors.},
   copyright = {2011 Youlden and Baade; licensee BioMed Central Ltd.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\Z5EW2HBM\\YouldenBaade - 2011 - The relative risk of second primary cancers in Queensland, Australia.pdf},
   journal = {BMC Cancer},
   language = {en},
   number = {1}
@@ -507,7 +498,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   year = {2012},
   publisher = {{International Agency for Research on Cancer}},
   address = {{Lyon, France}},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\A455NLKL\\IARC Working Group - 2012 - IARC monographs on the evaluation of carcinogenic risks to humans, volume 100.pdf},
   isbn = {978-92-832-1322-2},
   language = {en}
 }
@@ -527,7 +517,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   doi = {10.1002/ijc.23033},
   abstract = {We conducted a systematic meta-analysis of observational studies on cigarette smoking and cancer from 1961 to 2003. The aim was to quantify the risk for 13 cancer sites, recognized to be related to tobacco smoking by the International Agency for Research on Cancer (IARC), and to analyze the risk variation for each site in a systematic manner. We extracted data from 254 reports published between 1961 and 2003 (177 case-control studies, 75 cohorts and 2 nested case-control studies) included in the 2004 IARC Monograph on Tobacco Smoke and Involuntary Smoking. The analyses were carried out on 216 studies with reported estimates for `current' and/or `former' smokers. We performed sensitivity analysis, and looked for publication and other types of bias. Lung (RR = 8.96; 95\% CI: 6.73\textendash 12.11), laryngeal (RR = 6.98; 95\% CI: 3.14\textendash 15.52) and pharyngeal (RR = 6.76; 95\% CI: 2.86\textendash 15.98) cancers presented the highest relative risks (RRs) for current smokers, followed by upper digestive tract (RR = 3.57; 95\% CI: 2.63\textendash 4.84) and oral (RR = 3.43; 95\% CI: 2.37\textendash 4.94) cancers. As expected, pooled RRs for respiratory cancers were greater than the pooled estimates for other sites. The analysis of heterogeneity showed that study type, gender and adjustment for confounding factors significantly influence the RRs estimates and the reliability of the studies. \textcopyright{} 2007 Wiley-Liss, Inc.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ijc.23033},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\WSH8QPAP\\Gandini et al - 2008 - Tobacco smoking and cancer.pdf},
   journal = {International Journal of Cancer},
   keywords = {cancer,meta-analysis,tobacco},
   language = {en},
@@ -548,7 +537,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   issn = {0002-9262},
   doi = {10.1093/aje/kwx339},
   abstract = {Whether women are more susceptible than men to smoking-related lung cancer has been a topic of controversy. To address this question, we compared risks of lung cancer associated with smoking by sex. Altogether, 585,583 participants from 3 Norwegian cohorts (Norwegian Counties Study, 40 Years Study, and Cohort of Norway (CONOR) Study) were followed until December 31, 2013, through linkage of data to national registries. We used Cox proportional hazards models and 95\% confidence intervals to estimate risks. During nearly 12 million person-years of follow-up, 6,534 participants (43\% women) were diagnosed with lung cancer. More men than women were heavier smokers. Compared with never smokers, male and female current smokers with {$\geq$}16 pack-years of smoking had hazard ratios for lung cancer of 27.24 (95\% confidence interval (CI): 22.42, 33.09) and 23.90 (95\% CI: 20.57, 27.76), respectively (P for heterogeneity = 0.30). In contrast, for current smokers, in a model with pack-years measured continuously, men had a hazard ratio of 1.43 (95\% CI: 1.39, 1.48) and women a hazard ratio of 1.64 (95\% CI: 1.57, 1.71) for each 10\textendash pack-year increment of smoking (P for heterogeneity \&lt; 0.01). Our results suggest that women have an increased susceptibility to lung cancer compared with men, given the same lifetime smoking exposure.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\EB2MKWCJ\\Hansen et al - 2018 - Sex Differences in Risk of Smoking-Associated Lung Cancer.pdf},
   journal = {American Journal of Epidemiology},
   keywords = {\#cited},
   number = {5}
@@ -568,7 +556,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   issn = {0140-6736},
   doi = {10.1016/S0140-6736(11)60781-2},
   abstract = {Background Prevalence of smoking is increasing in women in some populations and is a risk factor for coronary heart disease. Whether smoking confers the same excess risk of coronary heart disease for women as it does for men is unknown. Therefore, we aimed to estimate the effect of smoking on coronary heart disease in women compared with men after accounting for sex differences in other major risk factors. Methods We undertook a systematic review and meta-analysis of prospective cohort studies published between Jan 1, 1966, and Dec 31, 2010, from four online databases. We selected cohort studies that were stratified by sex with measures of relative risk (RR), and associated variability, for coronary heart disease and current smoking compared with not smoking. We pooled data with a random effects model with inverse variance weighting, and estimated RR ratios (RRRs) between men and women. Findings We reviewed 8005 abstracts and included 26 articles with data for 3\hphantom{,}912\hphantom{,}809 individuals and 67\hphantom{,}075 coronary heart disease events from 86 prospective trials. In 75 cohorts (2{$\cdot$}4 million participants) that adjusted for cardiovascular risk factors other than coronary heart disease, the pooled adjusted female-to-male RRR of smoking compared with not smoking for coronary heart disease was 1{$\cdot$}25 (95\% CI 1{$\cdot$}12\textendash 1{$\cdot$}39, p{$<$}0{$\cdot$}0001). This outcome was unchanged after adjustment for potential publication bias and there was no evidence of important between-study heterogeneity (p=0{$\cdot$}21). The RRR increased by 2\% for every additional year of study follow-up (p=0{$\cdot$}03). In pooled data from 53 studies, there was no evidence of a sex difference in the RR between participants who had previously smoked compared with those who never had (RRR 0{$\cdot$}96, 95\% CI 0{$\cdot$}86\textendash 1{$\cdot$}08, p=0{$\cdot$}53). Interpretation Whether mechanisms underlying the sex difference in risk of coronary heart disease are biological or related to differences in smoking behaviour between men and women is unclear. Tobacco-control programmes should consider women, particularly in those countries where smoking among young women is increasing in prevalence. Funding None.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\R89IAD2W\\HuxleyWoodward - 2011 - Cigarette smoking as a risk factor for coronary heart disease in women compared.pdf},
   journal = {The Lancet},
   keywords = {\#cited},
   language = {en},
@@ -591,7 +578,6 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   abstract = {Previous studies have reported converging lung cancer rates between sexes. We examine lung cancer incidence rates in young women vs. young men in 40 countries across five continents. Lung and bronchial cancer cases by 5-year age group (ages 30\textendash 64) and 5-year calendar period (1993\textendash 2012) were extracted from Cancer Incidence in Five Continents. Female-to-male incidence rate ratios (IRRs) and 95\% confidence intervals (95\%CIs) were calculated by age group and birth cohort. Among men, age-specific lung cancer incidence rates generally decreased in all countries, while in women the rates varied across countries with the trends in most countries stable or declining, albeit at a slower pace compared to those in men. As a result, the female-to-male IRRs increased among recent birth cohorts, with IRRs significantly greater than unity in Canada, Denmark, Germany, New Zealand, the Netherlands and the United States. For example, the IRRs in ages 45\textendash 49 year in the Netherlands increased from 0.7 (95\% CI: 0.6\textendash 0.8) to 1.5 (95\% CI: 1.4\textendash 1.7) in those born circa 1948 and 1963, respectively. Similar patterns, though nonsignificant, were found in 23 additional countries. These crossovers were largely driven by increasing adenocarcinoma incidence rates in women. For those countries with historical smoking data, smoking prevalence in women approached, but rarely exceeded, those of men. In conclusion, the emerging higher lung cancer incidence rates in young women compared to young men is widespread and not fully explained by sex differences in smoking patterns. Future studies are needed to identify reasons for the elevated incidence of lung cancer among young women.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ijc.32809},
   copyright = {\textcopyright{} 2020 UICC},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\VTGUFMZT\\Fidler‐Benaoudia et al - 2020 - Lung cancer incidence in young women vs.pdf},
   journal = {International Journal of Cancer},
   keywords = {\#cited,Cancer Incidence in Five Continents,CI5,global,incidence,international,lung cancer},
   language = {en},
@@ -612,8 +598,7 @@ DOI: 10.18444/5.03.01.0005.0012.0002},
   doi = {10.1055/a-1009-6466},
   abstract = {Population-based cancer registries have a long-standing role in cancer monitoring. Scientific use of cancer registry data is one important purpose of cancer registration, but use of cancer registry data is not restricted to cancer registries. Cancer registration in Germany is currently heading towards population-based collection of detailed clinical data. This development together with additional options for record linkage and long-term follow-up will offer new opportunities for health services and outcome research. Both regional population-based registries and the German Centre for Cancer Registry Data (ZfKD) at the Robert Koch-Institute as well as international cancer registries and consortia or organizations may provide external researchers access to individual or aggregate level data for secondary data analysis. In this review, we elaborate on the access to cancer registry data for research purposes, availability of specific data items, and options for data linkage with external data sources. We also discuss as well as on limitations in data availability and quality, and describe typical biases in design and analysis.},
   copyright = {\textcopyright{} Georg Thieme Verlag KG Stuttgart {$\cdot$} New York},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\UWN78QU8\\Arndt et al - 2019 - Data from Population-based Cancer Registration for Secondary Data Analysis.pdf},
-  journal = {Das Gesundheitswesen},
+   journal = {Das Gesundheitswesen},
   keywords = {data quality,data sources,epidemiology,Key words
 cancer registration,secondary data},
   language = {en},
@@ -633,7 +618,6 @@ cancer registration,secondary data},
   issn = {2168-6181},
   doi = {10.1001/jamaoto.2017.1880},
   abstract = {This cohort study examines the association between survival and smoking status at the time of diagnosis of head and neck squamous cell carcinoma and the association between marital status and smoking in these same patients.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\8Q46API8\\Osazuwa-Peters et al - 2018 - Association Between Head and Neck Squamous Cell Carcinoma Survival, Smoking at.pdf},
   journal = {JAMA Otolaryngology - Head \& Neck Surgery},
   keywords = {\#cited},
   number = {1},
@@ -655,11 +639,28 @@ cancer registration,secondary data},
   issn = {1573-7225},
   doi = {10.1007/s10552-016-0714-9},
   abstract = {PurposeAn examination of multiple primary cancers can provide insight into the etiologic role of genes, the environment, and prior cancer treatment on a cancer patient's risk of developing a subsequent cancer. Different rules for registering multiple primary cancers (MP) are used by cancer registries throughout the world making data comparisons difficult.MethodsWe evaluated the effect of SEER and IARC/IACR rules on cancer incidence rates and trends using data from the SEER Program. We estimated age-standardized incidence rate (ASIR) and trends (1975\textendash 2011) for the top 26 cancer categories using joinpoint regression analysis.ResultsASIRs were higher using SEER compared to IARC/IACR rules for all cancers combined (3 \%) and, in rank order, melanoma (9 \%), female breast (7 \%), urinary bladder (6 \%), colon (4 \%), kidney and renal pelvis (4 \%), oral cavity and pharynx (3 \%), lung and bronchus (2 \%), and non-Hodgkin lymphoma (2 \%). ASIR differences were largest for patients aged 65+ years. Trends were similar using both MP rules with the exception of cancers of the urinary bladder, and kidney and renal pelvis.ConclusionsThe choice of multiple primary coding rules effects incidence rates and trends. Compared to SEER MP coding rules, IARC/IACR rules are less complex, have not changed over time, and report fewer multiple primary cancers, particularly cancers that occur in paired organs, at the same anatomic site and with the same or related histologic type. Cancer registries collecting incidence data using SEER rules may want to consider including incidence rates and trends using IARC/IACR rules to facilitate international data comparisons.},
-  file = {C\:\\Users\\ga27jar\\Zotero\\storage\\NFWTKWID\\Weir et al - 2016 - The effect of multiple primary rules on cancer incidence rates and trends.pdf},
   journal = {Cancer Causes \& Control},
   keywords = {\#to be read,IACR,IARC,Incidence rates,Multiple primary cancers,Population-based cancer registry,SEER,Trends},
   language = {en},
   number = {3}
+}
+
+
+
+
+
+@book{rkiCancerGermany20152020,
+  title = {Cancer in {{Germany}} in 2015/2016},
+  author = {RKI and GEKID},
+  year = {2020},
+  month = jun,
+  publisher = {{Robert Koch-Institut}},
+  address = {{Berlin}},
+  doi = {10.25646/6825},
+  abstract = {Zusammenfassung},
+  copyright = {(CC BY 3.0 DE) Namensnennung 3.0 Deutschland},
+  langid = {english},
+  annotation = {Accepted: 2021-06-09T12:49:37Z}
 }
 
 
